[gd_scene load_steps=6 format=3 uid="uid://ch04k3cbjegox"]

[ext_resource type="Script" uid="uid://c1bwxjyshtepx" path="res://level_select.gd" id="1_l15rw"]
[ext_resource type="Texture2D" uid="uid://dlax476o1ugtj" path="res://assests/World tiles/background.png" id="2_inx6o"]
[ext_resource type="Texture2D" uid="uid://del8crji3hih5" path="res://assests/UI stuff/Buttons/added_exit_button_spritesheet.png" id="3_7r5sd"]
[ext_resource type="Theme" uid="uid://cwhmbggqhmtve" path="res://scenes/main menu/base_theme.tres" id="4_f46ru"]
[ext_resource type="PackedScene" uid="uid://3g18ndvd6h2p" path="res://scenes/level Scenes/level buttons container.tscn" id="5_6ygf1"]

[node name="levelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l15rw")

[node name="bg" type="NinePatchRect" parent="."]
layout_mode = 0
offset_right = 972.0
offset_bottom = 666.0
texture = ExtResource("2_inx6o")

[node name="levelMenu" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(300, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_7r5sd")
region_rect = Rect2(0, 223, 32, 33)
patch_margin_left = 4
patch_margin_top = 5
patch_margin_right = 4
patch_margin_bottom = 4

[node name="mainContainer" type="VBoxContainer" parent="levelMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="seperator" type="Control" parent="levelMenu/mainContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="levelMenu/mainContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("4_f46ru")
theme_override_constants/outline_size = 10
theme_override_constants/shadow_outline_size = 10
theme_override_font_sizes/font_size = 25
text = "Level Select"

[node name="exitButton" type="Button" parent="levelMenu"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = -9.0
offset_right = 12.0
offset_bottom = 23.0
grow_horizontal = 0
theme = ExtResource("4_f46ru")

[node name="backButton" type="Button" parent="levelMenu"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -17.0
offset_top = -16.0
offset_right = 15.0
offset_bottom = 16.0
grow_vertical = 2
theme = ExtResource("4_f46ru")

[node name="Control" type="Control" parent="levelMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = 5.0
offset_right = -71.0
offset_bottom = 5.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="levelMenu/Control"]
layout_mode = 2
offset_left = -24.0
offset_top = -62.0
offset_right = -24.0
offset_bottom = 58.0

[node name="Control" type="Control" parent="levelMenu/Control/VBoxContainer"]
layout_mode = 2

[node name="gridsContainer" type="HBoxContainer" parent="levelMenu/Control"]
clip_contents = true
custom_minimum_size = Vector2(170, 120)
layout_mode = 2
offset_left = -24.0
offset_top = -58.0
offset_right = 516.0
offset_bottom = 62.0
theme_override_constants/separation = 5

[node name="seperator" type="Control" parent="levelMenu/Control/gridsContainer"]
layout_mode = 2

[node name="GridContainer" parent="levelMenu/Control/gridsContainer" instance=ExtResource("5_6ygf1")]
layout_mode = 2

[node name="GridContainer2" parent="levelMenu/Control/gridsContainer" instance=ExtResource("5_6ygf1")]
layout_mode = 2

[node name="GridContainer3" parent="levelMenu/Control/gridsContainer" instance=ExtResource("5_6ygf1")]
layout_mode = 2

[node name="nextButton" type="Button" parent="levelMenu"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -16.0
offset_right = 21.0
offset_bottom = 16.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("4_f46ru")

[connection signal="pressed" from="levelMenu/backButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="levelMenu/nextButton" to="." method="_on_next_button_pressed"]
